# chillercoin

./: .gitignore  HOW_TO_USE.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  USER_GUIDE.md  demo_data.csv  pyproject.toml
.local_ai/: config.json  hypotheses.db  pattern_library.db
.streamlit/: config.toml
ZeroChainAI/: Dockerfile  README.md  docker-compose.yml  requirements.txt
chiller-dashboard/: deploy.sh  index.html  manifest.json  style.css
chiller-landing/: docs.html  index.html  script.js  style.css
chiller-vault/: Anchor.toml  Cargo.toml  debug_pd.ts  deploy-devnet.sh  drift_executor.py  exchange_adapter.py  package-lock.json  package.json  vault_bridge.py
chiller-vault/programs/chiller-vault/: Cargo.toml
chiller-vault/programs/chiller-vault/src/: errors.rs  events.rs  lib.rs  state.rs
chiller-vault/programs/chiller-vault/src/instructions/: deposit.rs  initialize.rs  log_trade.rs  mod.rs  pause.rs  update_nav.rs  withdraw.rs
dashboard/: app.js  index.html  style.css
data/: bybit_btcusdt_15_20251018_20260416.csv  bybit_btcusdt_1_20251019_20260417.csv  bybit_btcusdt_240_20251018_20260416.csv  bybit_btcusdt_30_20251018_20260416.csv  bybit_btcusdt_30_20251019_20260417.csv  bybit_btcusdt_5_20251018_20260416.csv  bybit_btcusdt_5_20251019_20260417.csv  bybit_btcusdt_60_20251018_20260416.csv  bybit_btcusdt_D_20251018_20260416.csv  bybit_btcusdt_W_20251019_20260417.csv  bybit_solusdt_15_20260101_20260416.csv  bybit_solusdt_5_20251201_20260416.csv  bybit_solusdt_5_20260101_20260416.csv  bybit_suiusdt_5_20251021_20260419.csv  (+1 more)
deploy_vps/: monitor.py  (+36 more)
(+1158 files in other folders)
