[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-scalp-local"
version = "0.1.0"
description = "Local neural network pipeline for crypto futures impulse scalping"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.24",
  "pyarrow>=14.0",
  "requests>=2.31",
  "streamlit>=1.40",
  "torch>=2.2",
  "websocket-client>=1.8",
]

[project.scripts]
crypto-scalp = "crypto_scalp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
