[package]
name = "chiller-vault"
version = "0.1.0"
description = "$CHILLER AI-Powered Yield Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chiller_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
